@@ -1,5 +1,7 @@
 Overview of changes in lightdm 0.4.0
 
+    * Fix crash when child processes quit
+    * Fix crash when catching signals
     * liblightdm API changes:
       - ldm_greeter_start_authentication becomes ldm_greeter_login
       - The existing ldm_greeter_login is now ldm_greeter_start_session
@@ -15,7 +17,6 @@ Overview of changes in lightdm 0.4.0
     * Add unit tests
     * Make X server configuration a separate section and add additional options
     * Correctly handle signals from external programs (Thanks to Jason Conti)
-    * Fix reference counting with child processes
 
 Overview of changes in lightdm 0.3.7
 
